--- a/src/styles/cms.css
+++ b/src/styles/cms.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap);
-
 @import "tailwindcss";
 
 
@@ -722,9 +720,29 @@ html {
 */
 
 body {
-  margin: 0; /* 1 */
-  line-height: inherit; /* 2 */
-}
+    margin: 0; /* 1 */
+    line-height: inherit;
+    transition: background-color 0.5s ease;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    font-synthesis-weight: none;
+    text-rendering: optimizeLegibility;
+    font-feature-settings: "rlig" 1, "calt" 1;
+    color: rgb(var(--foreground-rgb));
+    background: linear-gradient(
+        to bottom,
+        transparent,
+        rgb(var(--background-end-rgb))
+        )
+        rgb(var(--background-start-rgb));
+    }
+
+    @media screen and (max-width: 768px) {
+        :root {
+          --velocidad-marquee: 5s;
+        }
+      }
 
 /*
 1. Add the correct height in Firefox.
